<resources>
    <string name="app_name">TODO_8</string>

    <string name="www_ggogle_com">www.ggogle.com</string>
    <string name="open_website">Open Website</string>
    <string name="enter_location">Enter location</string>
    <string name="open_location">Open Location</string>
    <string name="enter_you_text">enter you text</string>
    <string name="share_this_text">Share this Text</string>
</resources>