<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editText1"
        android:layout_width="323dp"
        android:layout_height="49dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/www_ggogle_com"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.074" />

    <Button
        android:id="@+id/button1"
        android:layout_width="328dp"
        android:layout_height="52dp"
        android:layout_marginEnd="20dp"
        android:onClick="OpenWebsite"
        android:text="@string/open_website"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.166" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="330dp"
        android:layout_height="63dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/enter_location"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.606"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.313" />

    <Button
        android:id="@+id/button2"
        android:layout_width="321dp"
        android:layout_height="48dp"
        android:onClick="OpenLocation"
        android:text="@string/open_location"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.398" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="326dp"
        android:layout_height="52dp"
        android:ems="10"
        android:hint="@string/enter_you_text"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.576" />

    <Button
        android:id="@+id/button3"
        android:layout_width="323dp"
        android:layout_height="63dp"
        android:onClick="Share"
        android:text="@string/share_this_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.58"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.676" />

</androidx.constraintlayout.widget.ConstraintLayout>